# mrsid-datasource

./: .gitignore  LICENSE.txt  README.md
android/HelloMapAndroid/app/: build.gradle
android/HelloMapAndroid/app/src/main/java/com/carto/datasources/: MrSIDRasterTileDataSource.java
android/HelloMapAndroid/app/src/main/java/com/carto/hellomap/android/: HelloMapActivity.java
ios/HelloMap.Objective-C/HelloMap.Objective-C/: ViewController.mm
ios/HelloMap.Objective-C/HelloMap.Objective-C.xcodeproj/: project.pbxproj
ios/HelloMap.Objective-C/HelloMap.Objective-C/datasource/: MrSIDRasterTileDataSource.h  MrSIDRasterTileDataSource.mm
native/: AndroidManifest.xml  CMakeLists.txt  MrSIDRasterTileDataSource.h  MrSIDRasterTileDataSourceWrapperJNI.cpp  MrSIDRasterTileWrapper.cpp  MrSIDRasterTileWrapper.h  README.md
